<resources>
    <string name="app_name">Cream Transport</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="sign_up">Dont have an account? <b>SIGN UP</b></string>
    <string name="login">Admin Panel</string>
    <string name="choose_driver">Choose driver</string>
    <string name="choose_start_date">Date from</string>
    <string name="choose_end_date">Date to</string>
    <string name="search">Search</string>
    <string name="str_company_name">Enter company name</string>
    <string name="str_registration">Enter registration no</string>
    <string name="str_email_id">Enter email id</string>
    <string name="str_phone">Enter phone no</string>
    <string name="str_phone1">Enter phone no1</string>
    <string name="str_phone2">Enter phone no2</string>
    <string name="str_fax">Enter fax no</string>
    <string name="str_skype">Enter skype id</string>
    <string name="str_street">Enter street no</string>
    <string name="str_city">Enter city</string>
    <string name="str_state">Enter state</string>
    <string name="str_country">Enter country</string>
    <string name="str_branch_location">Enter branch location</string>
    <string name="str_postal">Enter postal code</string>
    <string name="str_notes">Enter notes</string>
    <string name="save_changes">Save changes</string>
    <string name="truck_no">Enter truck no</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="enter_truck">Truck</string>
    <string name="trailers">Trailers</string>
    <string name="signin">Sign in</string>
    <string name="err_emailInvalid">Incorrect email id</string>
    <string name="err_password">Enter password</string>
    <string name="err_email">Enter email</string>
    <string name="err_password_length">Minimum 5 characters</string>
    <string name="no_internet_connection">Please enable internet connection</string>
    <string name="toolbar_title">Login</string>
    <string name="str_firstname">Enter firstname</string>
    <string name="update">Update</string>
    <string name="str_lastname">Enter lastname</string>
    <string name="str_user_type">Enter usertype</string>
    <string name="toolbar_acc_title">Edit account</string>
    <string name="str_Apassword">Enter password</string>
    <string name="str_confirm_password">Enter confirm password</string>
    <string name="str_name">Name</string>
    <string name="comments">Comments</string>
    <string name="offical_use">Offical use</string>
    <string name="str_signature">Signature</string>
    <string name="please_wait">Please wait</string>
    <string name="admin_menu_title">Menu</string>
    <string name="action_logout">Logout</string>
    <string name="action_account">Account</string>
    <string name="str_save_changes">Save</string>
    <string name="str_administrator">Administrator</string>
    <string name="tool_account_title">Account</string>
    <string name="view">View</string>
    <string name="str_location">Location</string>
    <string name="str_date">Date</string>
    <string name="str_time">Time of accident</string>
    <string name="other_details">Other details</string>
    <string name="str_phoneno">Phone</string>
    <string name="str_regno">Reg no</string>
    <string name="str_model">Model</string>
    <string name="str_address">Address</string>
    <string name="str_licenseno">License no</string>
    <string name="str_make">Make</string>
    <string name="str_insurance">Insurance</string>
    <string name="my_vehicle">My vehicle</string>
    <string name="str_contactname">Contact name</string>
    <string name="str_Insurancebroker">Insurance broker</string>
    <string name="str_chassis_no">Chassis no</string>
    <string name="str_policyno">Policy no</string>
    <string name="str_insurance_company">Insurance company</string>
    <string name="str_contact_no">Contact no</string>
    <string name="str_renewal_date">Renewal date</string>
    <string name="witness">Witness</string>
    <string name="tool_paysheet_title">Paysheet</string>
    <string name="images">Images</string>
    <string name="tool_view_paysheet_title">View paysheet</string>
    <string name="str_from">From</string>
    <string name="str_to">To</string>
    <string name="str_truck_no">Truck no</string>
    <string name="str_tr_no">Tr no</string>
    <string name="str_tr_no1">Tr no1</string>
    <string name="str_tr_no2">Tr no2</string>
    <string name="str_tr_no3">Tr no3</string>
    <string name="str_dolly_no">Dolly_no</string>
    <string name="str_mf_no">Mf no</string>
    <string name="str_rd_bd">RT/BD/Sing</string>
    <string name="str_fit">Fit for duty</string>
    <string name="str_speedo_start">Speedo start</string>
    <string name="str_speedo_finish">Speedo_finish</string>
    <string name="str_daily">Daily inspection done</string>
    <string name="str_unloading">Unloading hrs</string>
    <string name="str_office_use">Office use</string>
    <string name="tool_edit_paysheet_title">Edit view paysheet</string>
    <string name="no_data_found">No data found</string>
    <string name="err_driver_name">Select driver</string>
    <string name="err_start_date">Select date from</string>
    <string name="err_end_date">Select date to</string>
    <string name="tool_repair_title">Repairsheet</string>
    <string name="alert_message">Are you sure want to delete this sheet?</string>
    <string name="str_ok">Ok</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_rego_no">Rego no</string>
    <string name="str_faults_to_repair">Faults to repair</string>
    <string name="str_workshop_comments">Workshop comments</string>
    <string name="work_from_to">My first and last day work will be</string>
    <string name="apply_leave">Apply for leave from and to</string>
    <string name="company_name">Primeline Contracting Pty Ltd</string>
    <string name="leave_form">Leave Form</string>
    <string name="tool_view_repairsheet_title">View Repairsheet</string>
    <string name="tool_edit_repairsheet_title">Edit Repairsheet</string>
    <string name="tool_edit_trips_title">Trips</string>
    <string name="action_new_trip">Add new trip</string>
    <string name="tool_add_trips_title">Add Trip</string>
    <string name="err_from">Choose From</string>
    <string name="err_to">Choose To</string>
    <string name="action_search">Search</string>
    <string name="str_accept">Accepted</string>
    <string name="str_denied">Denied</string>
    <string name="str_wait">Wait</string>
    <string name="err_truck_no">Enter truck no</string>
    <string name="err_trailers">Enter trailer</string>
    <string name="err_manifest_no">Enter manifest no</string>
    <string name="err_dolly_no">Enter dolly no</string>
    <string name="err_load_available">Enter load available</string>
    <string name="err_from_who">Enter load from</string>
    <string name="err_load_due">Enter load due</string>
    <string name="err_by">Enter by</string>
    <string name="err_date_set">Enter date</string>
    <string name="err_change_over">Enter change over</string>
    <string name="err_driver">Enter driver</string>
    <string name="tool_edit_trip_title">Edit Trip</string>
    <string name="tool_view_trips_title">View Trip</string>
    <string name="express">Express &amp; General</string>
    <string name="no_danger">No dangerous goods</string>
    <string name="product">Product/Market</string>
    <string name="has_danger">Has dangerous goods</string>
    <string name="tool_user_title">Users</string>
    <string name="str_on_leave">on Leave</string>
    <string name="str_main_driver">Main Driver</string>
    <string name="str_change_over_driver">Change over driver</string>
    <string name="str_mechanic">Mechanic</string>
    <string name="tool_add_user_title">Add User</string>
    <string name="tool_view_user_title">View User</string>
    <string name="tool_edit_user_title">Edit User</string>
    <string name="err_first_name">Enter firstname</string>
    <string name="err_last_name">Enter lastname</string>
    <string name="err_phone">Enter phone</string>
    <string name="err_street_no">Enter street no</string>
    <string name="err_city">Enter city</string>
    <string name="err_state">Enter state</string>
    <string name="err_country">Enter country</string>
    <string name="err_psotal_code">Enter postal code</string>
    <string name="err_user_type">Enter user type</string>
    <string name="err_branch">Enter branch</string>
    <string name="tool_settings_title">Settings</string>
    <string name="str_working_status">Working status</string>
    <string name="str_custom_fields">Custom fields</string>
    <string name="str_useful_links">Useful links</string>
    <string name="str_app_settings">App settings</string>
    <string name="str_ula">ULA</string>
    <string name="tool_edit_leave_title">Edit Leave</string>
    <string name="type_leave">Types of leave (Please circle)</string>
    <string name="check_annual_leave">Annual Leave</string>
    <string name="long_service_leave">Long service leave</string>
    <string name="check_unpaid_leave">Unpaid leave</string>
    <string name="sick_leave">Sick leave</string>
    <string name="check_bereavement_leave">Bereavement leave</string>
    <string name="maternity_leave">Maternity leave</string>
    <string name="supervisior_app">Supervisor\'s Approval</string>
    <string name="radio_button_approve">Approved</string>
    <string name="radio_button_not_approve">Not Approved</string>
    <string name="enter_printed_name">Printed Name</string>
    <string name="enter_position">Position</string>
    <string name="enter_signature">Signature</string>
    <string name="err_print_name">Enter printed name</string>
    <string name="err_signature">Enter signature</string>
    <string name="tool_leave_title">Leave</string>
    <string name="err_approved_status">Please select approval status</string>
    <string name="tool_accident_title">Accident Report</string>
    <string name="tool_view_accident_title">View Accident Report</string>
    <string name="tool_preview_accident_title">Preview Accident Report</string>
    <string name="str_search">Please search word</string>
    <string name="toolbar_dashboard_title">Dashboard</string>
    <string name="str_current_km">Current KM</string>
    <string name="str_previous_km">Previous KM</string>
    <string name="str_diseal">Diseal</string>
    <string name="str_oil">Oil</string>
    <string name="str_mileage">Mileage</string>
    <string name="toolbar_view_fuel_title">View Fuelsheet</string>
    <string name="toolbar_edit_fuel_title">Edit Fuelsheet</string>
    <string name="err_location">Location</string>
    <string name="toolbar_fuel_title">Fuelsheet</string>
    <string name="truck">Truck no</string>
    <string name="search_truck_no">Search Truck</string>
    <string name="tool_fridge_codec_title">Fridge Codec</string>
    <string name="choose_type">Type word</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="operation">Operation</string>
    <string name="desc">Enter description</string>
    <string name="enter_code_no">Enter code no</string>
    <string name="enter_code_type">Enter code type</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="tool_view_fridge_codec_title">View Fridge Codec</string>
    <string name="str_thermal">Thermo King</string>
    <string name="str_carrier">Carrier Traniscold</string>
    <string name="codetype">Code type</string>
    <string name="codecolor">Code color</string>
</resources>