<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cream_window_bckgrd"
    android:orientation="horizontal">


    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_date"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_from"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_to"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_truck_no"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_tr_no1"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_tr_no2"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_tr_no3"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_dolly_no"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_mf_no"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_rd_bd"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_fit"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_speedo_start"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_speedo_finish"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_daily"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_unloading"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/table_border_filled_color"
        android:padding="@dimen/_10sdp"
        android:text="@string/str_office_use"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

</LinearLayout>