<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_toolbar" />

    <RadioGroup
        android:id="@+id/AAFC_RG_code_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/AAFC_RB_thermal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_thermal"
            android:textSize="@dimen/_11sdp" />

        <RadioButton
            android:id="@+id/AAFC_RB_carrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_carrier"
            android:textSize="@dimen/_11sdp" />


    </RadioGroup>

    <EditText
        android:id="@+id/AAFC_ET_code_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/border_gray_box"
        android:gravity="center_vertical"
        android:hint="@string/enter_code_no"
        android:inputType="number"
        android:padding="@dimen/_10sdp"
        android:singleLine="true"
        android:textSize="@dimen/_12sdp" />


    <RadioGroup
        android:id="@+id/AAFC_RG_code_colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/AAFC_RB_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/color_green"
            android:textSize="@dimen/_11sdp" />

        <RadioButton
            android:id="@+id/AAFC_RB_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/color_red"
            android:textSize="@dimen/_11sdp" />

        <RadioButton
            android:id="@+id/AAFC_RB_yellow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/color_yellow"
            android:textSize="@dimen/_11sdp" />


    </RadioGroup>

    <EditText
        android:id="@+id/AAFC_ET_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/border_gray_box"
        android:gravity="center_vertical"
        android:hint="@string/desc"
        android:padding="@dimen/_10sdp"
        android:singleLine="true"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/AAFC_ET_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="@drawable/border_gray_box"
        android:gravity="top"
        android:hint="@string/operation"
        android:lines="4"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:id="@+id/AAFC_BT_save"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_background"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_save_changes"
        android:textColor="@android:color/white" />


</LinearLayout>